--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -16,5 +16,23 @@
   "centers": "Centers",
   "groups": "Groups",
   "assistants": "Assistants",
-  "logout": "Logout"
+  "logout": "Logout",
+  "login": "Login",
+  "register": "Register",
+  "email": "Email",
+  "password": "Password",
+  "confirm_password": "Confirm Password",
+  "full_name": "Full Name",
+  "forgot_password": "Forgot Password?",
+  "dont_have_account": "Don't have an account?",
+  "already_have_account": "Already have an account?",
+  "create_account": "Create Account",
+  "please_enter_email": "Please enter your email",
+  "please_enter_valid_email": "Please enter a valid email",
+  "please_enter_password": "Please enter your password",
+  "please_confirm_password": "Please confirm your password",
+  "please_enter_name": "Please enter your name",
+  "password_too_short": "Password must be at least 6 characters",
+  "passwords_dont_match": "Passwords don't match",
+  "name_too_short": "Name must be at least 3 characters"
 }
